# deepagents

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.before-archive.md  README.md  STATUS.md  configure.py  mkdocs.yml  pyproject.toml  test_config.py
.github/workflows/: benchmarks.yml  ci.yml  tests.yml
docs/: ARCHITECTURE.md  README.md  TODO-model-roles-map.md  adk-python-learnings.md  architecture.md  deepagents_implementation_prompts.md  index.md  inspect-integration.md  inspect_agents_quickstart.md  inspect_console_cheatsheet.md  inspect_eval.md  inspect_eval_retry.md  inspect_eval_set.md  inspect_info.md  inspect_list.md  inspect_log.md  inspect_sandbox.md  inspect_score.md  inspect_trace.md  inspect_view.md  open-questions.md  openai-agents-learnings.md  retries_cache.md  stateless-vs-stateful-tools-1.md  stateless-vs-stateful-tools-harmonized.md  stateless-vs-stateful-tools.md  subagents.md  supervisor-limits.md  todo_feature_cache_policy.md  todo_feature_retry_cache_tests.md  todo_feature_retry_policy.md  tool-umbrellas.md
docs/adr/: 0002-model-roles-map.md  0003-supervisor-limits-and-observability.md  0004-filesystem-sandbox-guardrails.md  0005-tool-parallelism-policy.md  README.md
docs/backlog/: README.md  TODO-model-roles-map.md  todo_ci_exclusivity_research_runner.md  todo_feature_approvals_handoff_exclusivity_default.md  todo_feature_fs_readonly_flag.md  todo_feature_iterative_code_only.md  todo_feature_iterative_env_fallbacks.md  todo_feature_iterative_limits_enforcement.md  todo_feature_iterative_max_messages.md  todo_feature_iterative_productive_time_accounting.md  todo_feature_iterative_task_web_search_flag.md  todo_feature_iterative_tool_output_cap.md  todo_feature_pruning_env_toggles.md  todo_feature_pruning_token_aware.md  todo_feature_read_log_eval_filters.md  todo_feature_read_log_eval_formats.md  todo_feature_read_log_eval_out_dir.md  todo_feature_read_log_eval_summary.md  todo_feature_readme_docs_updates.md  todo_feature_runner_ci_exclusive.md  todo_feature_transcript_skipped_tool_event.md  todo_feature_yaml_limits_parser.md  todo_feature_yaml_subagent_role_mapping.md  todo_paperbench_iterative_agent.md
docs/cli/: README.md  inspect_cache.md  inspect_log.md  inspect_view.md
docs/decisions/: 0004-tool-output-truncation.md
docs/design/: deepagents_implementation_prompts.md  open-questions.md
docs/diagrams/: architecture.mmd  architecture_overview.mmd
docs/getting-started/: inspect_agents_quickstart.md  inspect_console_cheatsheet.md  research_example.md
docs/guides/: sandbox_profiles.md  stateless-vs-stateful-tools-harmonized.md  supervisor-limits.md  tool-umbrellas.md
docs/how-to/: approvals.md  filesystem.md  operations_logging_tracing.md  sandboxing_inspect_agents.md
docs/inspect-ai-rewrite/: DECISIONS-PENDING.md  NOTE-sandbox-preflight.md  TODO-approval-mapping.md  TODO-approval-ux-chains.md  TODO-canonical-tools-rework.md  TODO-ci-submodule-bootstrap.md  TODO-config-loader.md  TODO-core-state-models.md  TODO-dev-cli.md  TODO-examples-parity.md  TODO-limits-and-truncation.md  TODO-logging-recorders.md  TODO-migration-shim.md  TODO-model-resolver.md  TODO-model-roles.md  TODO-parallel-tools.md  TODO-run-utility.md  TODO-sandbox-health.md  TODO-sandbox-host-fs-mode.md  TODO-sandbox-preflight-gate-text-editor.md  TODO-sandbox-preflight-mode-toggle.md  TODO-sandbox-preflight-tests.md  TODO-sandbox-preflight-ttl-recheck.md  TODO-scoring-and-tasks.md  TODO-subagent-orchestration.md  TODO-supervisor-agent.md  TODO-todos-tooling.md  TODO-tool-output-truncation.md  TODO-tool-schema-and-errors.md  TODO-tool-timeouts-cancellation.md  TODO-truncation-default-limit-test.md  TODO-truncation-envelope-counts.md  TODO-virtual-fs-tools.md  TODO.md
docs/reference/: environment.md  iterative-agent-behavior.md
docs/todos/: 0004-sandbox-fs-todo.md  TODO-0001-observability-limits.md  TODO-0002-cli-limits-flags.md  TODO-0004-tests-limits.md  TODO-0005-config-limits-spec.md  TODO-0006-limit-footer.md  feature-handoff-exclusivity.md  feature-parallelism-kill-switch.md  feature-skipped-tool-events.md  feature-tests-tool-parallelism.md
docs/tools/: Differences.md  README.md  _defaults.md  _template.md  bash.md  delete_file.md  difference_draft_1.md  difference_draft_2.md  edit_file.md  files.md  inspect-langchain.md  ls.md  python.md  read_file.md  text_editor.md  think.md  typed_results.md  update_todo_status.md  web_browser.md  web_search.md  write_file.md  write_todos.md
env_templates/: inspect.env
examples/inspect/: prompt_task.py  run.py  subagent_approvals_demo.py
examples/research/: README.md  inspect.yaml  iterative_task.py  (+6 more)
scripts/: README.md  commit_guard.py  eval.json  iterative_quantinuum_t120s8.json  iterative_quantinuum_t60s4.json  manual_approval_check.py  quickstart_toy.py  read_log_eval.py  sweep_status.py
tests/: README.md  TESTING_APPROVALS_POLICIES.md  TESTING_ASYNC.md  TESTING_BENCHMARKS.md  TESTING_COVERAGE.md  TESTING_LIMITS_TRUNCATION.md  TESTING_MOCKING.md  TESTING_MODEL_RESOLUTION.md  TESTING_PARALLEL.md  TESTING_PROPERTY_BASED.md  TESTING_PYTEST_CORE.md  TESTING_SUBAGENTS_HANDOFFS.md  TESTING_TOOLS_FILESYSTEM.md  TESTING_TOOL_TIMEOUTS.md  conftest.py
(+146 files in other folders)
