[project]
name = "deepagents"
version = "0.0.4"
description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "langchain-ollama==0.3.6",
    "langchain>=0.2.14",
    "tavily-python>=0.7.11",
    "langgraph-cli[inmem]>=0.3.7",
    "langchain-openai>=0.3.30",
    "requests>=2.32.5",
]


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepagents"]
[tool.setuptools.package-dir]
"deepagents" = "src/deepagents"

[tool.setuptools.package-data]
"*" = ["py.typed"]
