[project]
name = "deepagents"
version = "0.0.4"
description = "Inspect-AI–based agents and tools (legacy deepagents pathway removed)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "inspect-ai>=0.3.127",
    "jsonlines>=4.0.0",
    "requests>=2.32.5",
    "tavily-python>=0.7.11",
]


[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inspect_agents"]
[tool.setuptools.package-dir]
"inspect_agents" = "src/inspect_agents"

[tool.setuptools.package-data]
"*" = ["py.typed"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
